--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="bn">
 <head>
     <meta name="monetag" content="1c06f334434f4c742b7b72fa99c643f0">
+    https://otieu.com/4/10152796
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="183425" async data-cfasync="false"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>zv 777 - Welcome</title>
